<resources>
    <string name="app_name">SouteTirza-pset2</string>
    <string name="introduction">"Welcome to Mad Libs! I will ask you to fill in words to complete a story. You won't be able to see the whole story until you are done filling in all the missing words. That's part of the fun."</string>
    <string name="noun">Noun</string>
    <string name="ok">OK</string>
    <string name="start">Get started</string>
    <string name="fillIn">Fill in the words to complete the story</string>
    <string name="remaining">Fill in the first word!</string>
    <string-array name="stories">
        <item>Clothes</item>
        <item>Dance</item>
        <item>Simple</item>
        <item>Tarzan</item>
        <item>University</item>
    </string-array>
    <string name="chooseStory">Choose a story</string>
    <string name="finishedText">You\'ve completed your story!</string>
    <string name="again">Play again</string>
    <string name="picDesc">Mad Libs picture</string>
    <string name="dropdown">Choose a story from the dropdown menu and click the button.</string>
</resources>
